route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-ctenorio
  namespace: ctenorio
spec:
  path: /
  to:
    kind: Service
    name: frontend-frontend-service
  port:
    targetPort: 8093
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAwY627CEhGmswoRpnaJZK4v+7NV5/NvefoYhljl0SdQRWXK69
[...]
      lEAuV2c4IE3yU5X47JwaRv6ZxfHLH9KaszmBv3evpfcbfAl9YccC
      -----END RSA PRIVATE KEY-----

    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIEvzCCAqegAwIBAgIUBGUwCHU6Ti0ZRLI8W/X5oUhbHIkwDQYJKoZIhvcNAQEL
[...]
      zXwY4j7rqTKnvYR4gawrCWqviA==
      -----END CERTIFICATE-----

    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFSTCCAzECFFayzFfCcBraJ2D891a1ta5EiWHUMA0GCSqGSIb3DQEBCwUAMGEx
[...]
      STOpUTQ709HEEXQFZQ==
      -----END CERTIFICATE-----
